--- a/index.css
+++ b/index.css
@@ -283,7 +283,7 @@ nav a.active, nav a:hover{
     display: flex;
     justify-content: center;
     position: relative;
-    z-index: -1; 
+    /* z-index: -1;  */
     margin: 20px;
      
 }
